AO3-5120 Stop link underline from getting cut off on 'Works that inspired' list
The opacity property was somehow responsible for the link underline (which is actually a border) getting hidden beneath the 'inspired WORK' line on the Related Works page. I removed the opacity property and instead set the background color to #eee, which is what you get when you put #ededed at 95% opacity over white

--- a/public/stylesheets/site/2.0/09-roles-states.css
+++ b/public/stylesheets/site/2.0/09-roles-states.css
@@ -3,8 +3,7 @@ http://otwcode.github.com/docs/front_end_coding/patterns/modifiers
 */
 
 .own, .draft, .draft .wrapper, .unread, .child, .unwrangled, .unreviewed {
-  background: #ededed;
-    opacity: 0.95;
+  background: #eee;
 }
 
 .draft {
